<resources>
    <string name="app_name">Notificator</string>
    <string name="time_table">Time table</string>
    <string name="duties">Time to eat</string>
    <string name="time">time</string>
    <string name="save">save</string>
    <string name="start_new_day">START NEW DAY</string>
    <string name="last_meal">last meal</string>
    <string name="notify">notify</string>
    <string name="enter_time">Enter time</string>
    <string name="enter_notification">Enter notification</string>
    <string name="cancel">Cancel</string>
</resources>
